# ERPNext_workspace

./: .gitignore  Cargo.toml  Dockerfile  Taskfile.yaml  docker-compose.yml
benches/: tenant_bench.rs
crates/desk-app/: Cargo.toml
crates/desk-app/src/: main.rs
crates/desk-components/: Cargo.toml
crates/desk-components/src/: lib.rs
crates/desk-components/src/form_engine/: biometric_auth.rs  file_upload.rs  interpreter.rs  live_feed.rs  live_form.rs  mod.rs  worker_dashboard.rs
crates/desk-components/tests/: desk_components_tests.rs
crates/erp-accounting/: Cargo.toml
crates/erp-accounting/src/: balance_sheet.rs  ledger_posting.rs  lib.rs  period_closing.rs  posting.rs
crates/erp-accounting/tests/: ledger_posting_tests.rs
crates/erp-cms/: Cargo.toml
crates/erp-cms/src/: lib.rs  security.rs  transcoder.rs  video_player.rs
crates/erp-cms/tests/: video_streaming_tests.rs
crates/erp-crm/: Cargo.toml
crates/erp-crm/src/: lead_scoring.rs  lib.rs  pipeline.rs
crates/erp-hr/: Cargo.toml
crates/erp-hr/src/: attendance.rs  lib.rs  payroll.rs
crates/erp-inventory/: Cargo.toml
crates/erp-inventory/src/: fifo_valuation.rs  lib.rs
crates/erp-learning/: Cargo.toml
crates/erp-learning/src/: learning_progress.rs  lib.rs  lms_engine.rs
crates/erp-lending/: Cargo.toml
crates/erp-lending/src/: amortization.rs  lib.rs
crates/erp-manufacturing/: Cargo.toml
crates/erp-manufacturing/benches/: bom_bench.rs
crates/erp-manufacturing/src/: bom.rs  lib.rs  mrp.rs
crates/erp-support/: Cargo.toml
crates/erp-support/src/: gameplan.rs  lib.rs  sla.rs
crates/erp-trade/: Cargo.toml
crates/erp-trade/src/: lib.rs  pricing_rules.rs  tax_templates.rs
crates/frappe-framework/: Cargo.toml
crates/frappe-framework/src/: lib.rs
crates/frappe-framework/src/document/: scripting.rs
crates/frappe-meta/: Cargo.toml
crates/frappe-meta/src/: lib.rs  migration.rs  registry.rs  schema.rs  schema_compiler.rs
crates/frappe-meta/tests/: schema_compiler_tests.rs
crates/frappe-net/: Cargo.toml
crates/frappe-net/src/: h3_server.rs  lib.rs  main.rs  routes.rs  sse.rs  webhook_worker.rs
crates/frappe-net/src/middleware/: tenant.rs
crates/frappe-net/tests/: media_cms_tests.rs  tenant_isolation_tests.rs
crates/frappe-storage/: Cargo.toml
crates/frappe-storage/src/: lib.rs
crates/rbench/: Cargo.toml
crates/rbench/src/: main.rs
