[workspace]
members = [
    "crates/frappe-net",
    "crates/frappe-meta",
    "crates/frappe-framework",
    "crates/erp-accounting",
    "crates/erp-inventory",
    "crates/erp-manufacturing",
    "crates/erp-trade",
    "crates/erp-lending",
    "crates/erp-support",
    "crates/erp-learning",
    "crates/erp-crm",
    "crates/erp-hr",
    "crates/frappe-storage",
    "crates/desk-app",
    "crates/desk-components"
]
resolver = "2"
