[package]
name = "desk-components"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.2", features = ["web"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["time"] }
reqwest = { version = "0.13.4", features = ["json", "multipart"] }
erp-cms = { path = "../erp-cms" }

[dev-dependencies]
dioxus-ssr = "0.7.9"

