[package]
name = "erp-cms"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_decimal = { version = "=1.42.0", features = ["maths", "serde"] }
rust_decimal_macros = "1.36.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10"
sha2 = "0.10"
hmac = "0.12"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.40", features = ["full"] }
tempfile = "3.27.0"
log = "0.4"
actix-web = "4.9"
actix-multipart = "0.6"
surrealdb = { version = "3.0.5", default-features = false, features = ["kv-mem"] }
percent-encoding = "2.3"
futures-util = "0.3"
