[package]
name = "erp-hr"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_decimal = { version = "=1.42.0", features = ["maths", "serde"] }
rust_decimal_macros = "1.36.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
rhai = { version = "1.25.1", features = ["sync"] }
erp-accounting = { path = "../erp-accounting" }
surrealdb = { version = "3.0.5", default-features = false, features = ["protocol-ws", "rustls"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }


