[package]
name = "erp-inventory"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
surrealdb = { version = "3.0.5", features = ["kv-mem"] }
tokio = { version = "1.40", features = ["full"] }
rust_decimal = { version = "=1.42.0", features = ["maths", "serde"] }
rust_decimal_macros = "1.36.0"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
