[package]
name = "frappe-meta"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surrealdb = { version = "3.0.5", default-features = false, features = ["kv-mem"] }
tokio = { version = "1.40", features = ["full"] }
thiserror = "2.0"

