[package]
name = "frappe-net"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-service = "2.0"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surrealdb = { version = "3.0.5", features = ["kv-mem"] }
tokio = { version = "1.40", features = ["full"] }
quiche = "0.22"
ring = "0.17"
log = "0.4"
env_logger = "0.11.10"
reqwest = { version = "0.13.4", features = ["json"] }
erp-hr = { path = "../erp-hr" }
erp-cms = { path = "../erp-cms" }
rust_decimal = { version = "=1.42.0", features = ["maths", "serde"] }
rust_decimal_macros = "1.36.0"

